--- a/backend/ModernWMS.WMS/ModernWMS.WMS.csproj
+++ b/backend/ModernWMS.WMS/ModernWMS.WMS.csproj
@@ -8,10 +8,13 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Entities\Models\" />
     <Folder Include="Entities\ViewModels\" />
     <Folder Include="Services\" />
     <Folder Include="IServices\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ModernWMS.Core\ModernWMS.Core.csproj" />
   </ItemGroup>
 
 </Project>
