--- a/backend/ModernWMS/appsettings.json
+++ b/backend/ModernWMS/appsettings.json
@@ -17,8 +17,7 @@
     "SecurityDefinition": false,
     "XmlFiles": [
       "ModernWMS.Core.xml",
-      "ModernWMS.Entities.Common.xml",
-      "ModernWMS.Controllers.Common.xml"
+      "ModernWMS.WMS.xml"
     ]
   },
   "TokenSettings": {
