--- a/backend/ModernWMS.WMS/ModernWMS.WMS.csproj
+++ b/backend/ModernWMS.WMS/ModernWMS.WMS.csproj
@@ -4,14 +4,8 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Entities\ViewModels\" />
-    <Folder Include="Services\" />
-    <Folder Include="IServices\" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ModernWMS.Core\ModernWMS.Core.csproj" />
