--- a/backend/ModernWMS/ModernWMS.csproj
+++ b/backend/ModernWMS/ModernWMS.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ModernWMS.Core\ModernWMS.Core.csproj" />
+    <ProjectReference Include="..\ModernWMS.WMS\ModernWMS.WMS.csproj" />
   </ItemGroup>
 
 </Project>
