--- a/backend/ModernWMS/nlog.config
+++ b/backend/ModernWMS/nlog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="${basedir}\Log\internal-nlog.txt">
+      internalLogFile="${basedir}/Log/internal-nlog.txt">
 
   <!-- enable asp.net core layout renderers -->
   <extensions>
