--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "vue-router": "^4.1.6",
     "vuetify": "^3.0.4",
     "vuex": "^4.0.2",
-    "vuex-persist": "^3.1.3"
+    "vuex-persist": "^3.1.3",
+    "vxe-table": "^4.3.7",
+    "xe-utils": "^3.5.7"
   },
   "devDependencies": {
     "@mdi/font": "^7.1.96",
