login user infomation add id of user'role,warehouse all api add prama warehouse_id,add location stock management

--- a/backend/ModernWMS.WMS/ModernWMS.WMS.csproj
+++ b/backend/ModernWMS.WMS/ModernWMS.WMS.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\ModernWMS.Core\ModernWMS.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\Models\userrole\" />
+  </ItemGroup>
+
 </Project>
