--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3",
     "vxe-table": "^4.3.7",
-    "xe-utils": "^3.5.7"
+    "xe-utils": "^3.5.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@mdi/font": "^7.1.96",
