--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.2.1",
+    "exceljs": "^4.3.0",
     "mitt": "^3.0.0",
     "ts-md5": "^1.3.1",
     "vue": "^3.2.45",
@@ -19,6 +20,7 @@
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3",
     "vxe-table": "^4.3.7",
+    "vxe-table-plugin-export-xlsx": "^3.0.4",
     "xe-utils": "^3.5.7",
     "xlsx": "^0.18.5"
   },
