--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.2.1",
     "exceljs": "^4.3.0",
+    "lottie-web": "^5.10.1",
     "mitt": "^3.0.0",
     "ts-md5": "^1.3.1",
     "vue": "^3.2.45",
