add register api

--- a/backend/ModernWMS/appsettings.json
+++ b/backend/ModernWMS/appsettings.json
@@ -11,9 +11,9 @@
   },
   "SwaggerSettings": {
     "Name": "ModernWMS",
-    "ApiTitle": "ProjectCooperation_API",
+    "ApiTitle": "ModernWMS_API",
     "ApiVersion": "V1.0",
-    "ApiDescription": "ProjectCooperation_API",
+    "ApiDescription": "ModernWMS_API",
     "SecurityDefinition": false,
     "XmlFiles": [
       "ModernWMS.Core.xml",
