fix register api  and add sqllite support

--- a/backend/ModernWMS/appsettings.json
+++ b/backend/ModernWMS/appsettings.json
@@ -6,8 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "Database": { "db": "MySql" },
   "ConnectionStrings": {
-    "MainConn": "Server=192.168.103.80;Database=wms;Port=3306;charset=utf8;uid=root;pwd=123456789a?;"
+    "MySqlConn": "Server=192.168.103.80;Database=wms;Port=3306;charset=utf8;uid=root;pwd=123456789a?;",
+    "SqlLiteConn": "Data Source = wms.db"
   },
   "SwaggerSettings": {
     "Name": "ModernWMS",
