--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -3,4 +3,4 @@ ENV = 'production'
 VITE_CLI_PORT = 5174
 VITE_SERVER_PORT = 21011
 VITE_BASE_API = /api
-VITE_BASE_PATH = http://192.168.103.80
+VITE_BASE_PATH = https://wmsonline.ikeyly.com
