change database to sqllite

--- a/backend/ModernWMS/appsettings.json
+++ b/backend/ModernWMS/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Database": { "db": "MySql" },
+  "Database": { "db": "SqlLite" },
   "ConnectionStrings": {
     "MySqlConn": "Server=127.0.0.1;Database=wms;Port=3306;charset=utf8;uid=root;pwd=123456789a?;",
     "SqlLiteConn": "Data Source = wms.db"
